--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vite-plugin-vue-devtools": "^7.7.7",
     "vue-tsc": "^2.2.4"
   }
 }
