--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@vue/tsconfig": "^0.7.0",
     "axios": "^1.8.4",
     "daisyui": "^5.0.3",
+    "idb": "^8.0.3",
+    "p-limit": "^6.2.0",
     "pinia": "^3.0.1",
     "pokedex-promise-v2": "^4.2.1",
     "tailwindcss": "^4.0.13",
